# mahan_lms_agentic_ai

./: .env  main.py  pyproject.toml  requirments.txt
config/: settings.py
services/agents/: base_agent.py
services/tools/: academic_tool.py  resource_tool.py  schedule_tool.py
src/config/: settings.py
src/lms_agents/: base_agent.py
src/lms_agents/auth/: auth_agent.py
src/lms_agents/courses/: course_agent.py
src/lms_agents/grades/: grades_agent.py
src/lms_agents/homeworks/: homeworks_agent.py
src/lms_agents/lessons/: lessons_agent.py
src/lms_agents/manager/: manager_agent.py
src/lms_agents/students/: students_agent.py
src/services/lms_agents/courses/: course_agent.py
src/services/lms_agents/manager/: manager_agent.py
src/tools/auth/: auth_tools.py
src/tools/course/: course_tools.py
src/tools/grades/: grades_tools.py
src/tools/homeworks/: homeworks_tools.py
src/tools/lessons/: lessons_tools.py
src/tools/students/: students_tools.py
src/utils/: utils.py
