[project]
name = "mahan-lms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.75.5.post1",
    "openai>=1.99.9",
    "openai-agents>=0.2.8",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "smolagents>=1.21.1",
]
